[lworld] C2 compilation fails with assert(n->Opcode() != Op_Phi) failed: cannot match

XMLWordPrintable

      # Internal Error (/oracle/valhallaExp/open/src/hotspot/share/opto/matcher.cpp:1427), pid=6757, tid=6769
      # assert(n->Opcode() != Op_Phi) failed: cannot match

      Current CompileTask:
      C2: 2744 167 !b compiler.valhalla.valuetypes.TestNullableArrays::test82 (120 bytes)

      Stack: [0x00007f76f2676000,0x00007f76f2777000], sp=0x00007f76f2772150, free space=1008k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x13fd68a] Matcher::match_tree(Node const*)+0x58a
      V [libjvm.so+0x140033d] Matcher::xform(Node*, int)+0xc9d
      V [libjvm.so+0x1403ef4] Matcher::match()+0xba4
      V [libjvm.so+0xa6e61a] Compile::Code_Gen()+0x8a
      V [libjvm.so+0xa72e67] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x12e7
      V [libjvm.so+0x88f782] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2f2
      V [libjvm.so+0xa7fcb8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x448
      V [libjvm.so+0xa80abf] CompileBroker::compiler_thread_loop()+0x39f
      V [libjvm.so+0x19ae20a] JavaThread::thread_main_inner()+0x1da
      V [libjvm.so+0x19b33bb] Thread::call_run()+0xfb
      V [libjvm.so+0x1577661] thread_native_entry(Thread*)+0x121

            Assignee:
            Roland Westrelin
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: