8226517: [lworld] C2 compilation fails with assert(n->Opcode() != Op_Phi) failed: cannot match

Reviewed-by: thartmann